Added game elements, antonymns, choices remaining counter, etc.

--- a/views/index.pug
+++ b/views/index.pug
@@ -7,6 +7,8 @@ block content
       h1(id="main_h1") Synonyms Ninja
       a(href="https://github.com/jsears4585", target="_blank")
         img(class="octocat", src="/images/octocat.png")
+      div(id="goal_word")
+      div(id="choices_remaining")
     
     div(class="row-fluid")
       div(id="left-div")
