--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -28,7 +28,7 @@ a:hover, a:active, a:visited, a:link {
 }
 
 #header {
-  height: 150px;
+  height: 230px;
 }
 
 #main_h1 {
@@ -55,6 +55,10 @@ a:hover, a:active, a:visited, a:link {
   width: 100%;
   display: inline-block;
   margin-top: 10px;
+}
+
+#results, #goal_word, #choices_remaining {
+  color: #cacaca;
 }
 
 #whisper {
