--- a/views/index.pug
+++ b/views/index.pug
@@ -9,7 +9,7 @@ block content
         div(id="header")
           h1(id="main_h1") Synonyms Ninja
           a(href="https://github.com/jsears4585", target="_blank")
-            img(class="octocat", src="/images/octocat.png")
+            img(id="octocat", src="/images/octocat.png")
           div(id="goal_word")
           div(id="choices_remaining")
         input#search(type="search", autocomplete="off", 
